frontend/test/should_pass/attrib_100.grg
using attrib_model_100;

rule toStringA_value {
  a:A;
  modify {
    emit(a.value);
  }
}

rule toStringAF {
  a:A -f:F-> ;
  modify {
    emit(a.value, f.x);
  }
}

rule evalAF {
  a:A -f:F-> ;
  s:String;
  abi:AcINT_BOOL;
  as:ASTR;
  ai:AINT;
  if {
    a.value == "xXx";
    a.value == f.x;
  }
  modify {
    eval {
      s.s = a.value;
      s.s = f.x;
      s.s = a.value + f.x;
      s.s = (string)a.value + (string)f.x;

      abi.value = 1;
      as.value = "42";
      ai.value = 23;
    }
  }
}
