frontend/test/should_fail/index_pattern_edge_index_multiple_access_crossed.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{ascending(Ei >= 0, E1j <= 1)}->;

	modify {
	}
}
